Fix for Issue 671: sip protocol handler had the same problem for loading the sip stack properties file as the application router parser to load the dar file
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@5857 bf0df8d0-2c1f-0410-b170-bd30377b63dc